--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
     "moment": "^2.29.4",
+    "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.10.0",
